# golf-cronos

./: .gitignore  CMakeLists.txt
docs/: El proyecto final UdeA - Informática 2.md  Logica del juego.md
docs/momento-2/: momento-dos.md
golf-cronos/: CMakeLists.txt
golf-cronos/inicio/: iniciowindow.cpp
golf-cronos/src/cerebro/: gestorbasedatos.cpp  gestorbasedatos.h
golf-cronos/src/escenario/pantallas/: iniciowindow.cpp  iniciowindow.h  iniciowindow.ui
src/: main.cpp  recursos.qrc
src/escenario/juego/: nivel.cpp  nivel.h
src/escenario/juego/items/: hoyo.cpp  hoyo.h  obstaculo.h  portal.cpp  portal.h
src/escenario/juego_2/: nivel_d.cpp  nivel_d.h
src/escenario/juego_2/items/: agenteia.cpp  agenteia.h  bandera.cpp  bandera.h  centrodepoder.cpp  centrodepoder.h  cratergris.cpp  cratergris.h  craterhielo.cpp  craterhielo.h  craterrojo.cpp  craterrojo.h  cronometrotiempo.cpp  cronometrotiempo.h  logrosvidas.cpp  logrosvidas.h  momentopelota.cpp  momentopelota.h  pelotablanca.cpp  pelotablanca.h  pelotaroja.cpp  pelotaroja.h  personaje.cpp  personaje.h  portal.cpp  remolinometa.cpp  remolinometa.h  ruedapinchos.cpp  ruedapinchos.h  vidas.cpp  vidas.h
src/escenario/modos_juego/: juegomododosqgraphicsview.cpp  juegomododosqgraphicsview.h  juegomodounoqgraphicsview.cpp  juegomodounoqgraphicsview.h
src/escenario/pantallas/: iniciowindow.cpp
src/escenario/widgets/: modosgamewidget.cpp  modosgamewidget.h
